--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<style type="text/css" src="css/style.css"></style>
 </head>
 <body>
-	<h2>Lesson 2</h2>
-	<p>Текст текст</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cum possimus temporibus et reiciendis, provident quam iure recusandae voluptates iste repudiandae soluta eaque natus ipsam corporis distinctio quas magnam obcaecati.</p>
 </body>
 </html>
