--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Git</title>
-	<style type="text/css" src="css/style.css"></style>
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque cum possimus temporibus et reiciendis, provident quam iure recusandae voluptates iste repudiandae soluta eaque natus ipsam corporis distinctio quas magnam obcaecati.</p>
